Created Images Folder

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <label for="genderLabel" class="genderLabel">Gender&nbsp;<span class="required">*</span></label>
 
                 <div class="gendersDiv">
-                    <img src="./male.png" alt="Male" class="maleGender">
+                    <img src="./images/male.png" alt="Male" class="maleGender">
 
-                    <img src="./female.png" alt="Female" class="femaleGender">
+                    <img src="./images/female.png" alt="Female" class="femaleGender">
                 </div>
             </fieldset>
 
@@ -108,11 +108,11 @@
                 <label for="jewelleryType" class="jewelleryTypeLabel">Type of Jewellery&nbsp;
                     <span class="required">*</span></label>
                 <div class="jewelleryDiv">
-                    <img src="./ring.png" alt="Ring" class="ring">
+                    <img src="./images/ring.png" alt="Ring" class="ring">
 
-                    <img src="./necklace.png" alt="Necklace" class="necklace">
+                    <img src="./images/necklace.png" alt="Necklace" class="necklace">
 
-                    <img src="./pendant.png" alt="Pendant" class="pendant">
+                    <img src="./images/pendant.png" alt="Pendant" class="pendant">
                 </div>
             </fieldset>
 
