Files Format Updated

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
                     <label for="recommend" class="recommendLabel">Would you like to match your jewellery with an
                         outfit? Upload an image of your outfit for better recommendations.</label>
 
-                    <input type="file" class="recommendFileUpload" id="recommendFileUpload" accept="image/png, image/jpg, image/jpeg">
+                    <input type="file" class="recommendFileUpload" id="recommendFileUpload"
+                        accept="image/png, image/jpg, image/jpeg">
                 </div>
                 <div id="imagePreview" class="imagePreview">
                 </div>
